bdr.BDR.scala.error
Compilation error:
BDR:1: error: not found: type char
var message:char = ""
            ^BDR:5: error: not found: value getIndication
  message = getIndication()
            ^